force-app/main/default/objects/AM_Course__c/fields/AM_CourseID__c.field-meta.xml
<CustomField>
    <fullName>AM_CourseID__c</fullName>
    <displayFormat>C-{0000}</displayFormat>
    <label>Course ID</label>
    <type>AutoNumber</type>
</CustomField>