force-app/main/default/objects/AM_Course__c/fields/AM_Credits__c.field-meta.xml
<CustomField>
    <fullName>AM_Credits__c</fullName>
    <label>Credits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>