force-app/main/default/objects/AM_Course__c/fields/AM_Department__c.field-meta.xml
<CustomField>
    <fullName>AM_Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department</label>
    <referenceTo>AM_Department__c</referenceTo>
    <relationshipLabel>Courses</relationshipLabel>
    <relationshipName>Courses</relationshipName>
    <type>Lookup</type>
</CustomField>