force-app/main/default/objects/AM_Course__c/fields/AM_Description__c.field-meta.xml
<CustomField>
    <fullName>AM_Description__c</fullName>
    <label>Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>