force-app/main/default/objects/AM_Course__c/fields/AM_Duration__c.field-meta.xml
<CustomField>
    <fullName>AM_Duration__c</fullName>
    <label>Duration(Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>