force-app/main/default/objects/AM_Course__c/fields/AM_EndDate__c.field-meta.xml
<CustomField>
    <fullName>AM_EndDate__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>