force-app/main/default/objects/AM_Course__c/fields/AM_Fees__c.field-meta.xml
<CustomField>
    <fullName>AM_Fees__c</fullName>
    <label>Fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>