force-app/main/default/objects/AM_Course__c/fields/AM_StartDate__c.field-meta.xml
<CustomField>
    <fullName>AM_StartDate__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>